# malleable-checker

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  Untitled Diagram.drawio  checker-crontab  config.ini  crontab_script.sh  overview.drawio  run.sh  start_docker.sh
.github/: FUNDING.yml
alarm_assert/: setup.py
alarm_assert/alarm_assert/: checker.py  exec.py
alarm_assert/tests/: checker_test.py
checker-rs/: Cargo.toml  hello.wat
checker-rs/examples/: read_from_stdin.wat  reading_ds.wat  this_checker_always_fail.wasm  this_checker_always_fail.wat  this_checker_always_succeeds.wat  write_to_stdout.wat  write_to_stdout_dataset_directly.wat
checker-rs/src/: checker.rs  main.rs  memory.rs
checker-rs/wit/: README.md
example/: checker.db  random_data.sql
front_end/: setup.py
front_end/server/: app.py
front_end/server/templates/: checker_form.html  datasource_form.html  header.html  index.html  list_checkers.html  list_datasource.html  menu.html
scripts/db/: create.sql
scripts/docker/: run.sh
wasm/: run.sh
wasm/assemblyscript/: index.html  package-lock.json  package.json
wasm/assemblyscript/assembly/: index.ts
wasm/ruby-wasm32-wasi/usr/local/include/ruby-3.2.0+1/wasm32-wasi/ruby/: config.h
wasm/src/: hi.rb
webservice/: Cargo.toml
wit/: README.md  checker.wit
