[package]
name = "checker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
#clap = { version = "3.0", features = ["derive"] }
cap-std = "0.24"
wasmtime = "0.37"
# Using wasi so we can read the 
# datasource from the disk
wasmtime-wasi = "0.37"
